--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -14,6 +14,29 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     
-
     - name: Install dependencies
       run: php8.0 src/main/bootstrap.php install
+
+    - name: Building
+      run: php8.0 src/main/bootstrap.php build
+  test:
+    runs-on: ubuntu-latest
+    
+    steps:
+    - name: Install packages
+      run: ./target/uppm.phar install
+    
+    - name: Getting autoload
+      run: ./target/uppm.phar autoload
+
+    - name: Creating Project and testing it
+      run: |
+        ./target/uppm.phar create test
+        cd test
+        ../target/uppm.phar install deverm
+        ../target/uppm.phar install interaapps/ulole-orm+master@github
+        ../target/uppm.phar install
+        ../target/uppm.phar lock
+        ../target/uppm.phar run start
+        ../target/uppm.phar build
+        ./target/test-1.0.phar
