--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -16,12 +16,13 @@ jobs:
     
     - name: Install dependencies
       run: |
-        sudo chmod 777 /etc/php/8.0/cli/php.ini
-        sudo echo \nphar.readonly = Off >> /etc/php/8.0/cli/php.ini
         php8.0 src/main/bootstrap.php install
 
     - name: Building
-      run: php8.0 src/main/bootstrap.php build
+      run: |
+        sudo chmod 777 /etc/php/8.0/cli/php.ini
+        sudo echo phar.readonly = Off >> /etc/php/8.0/cli/php.ini
+        php8.0 src/main/bootstrap.php build
   test:
     runs-on: ubuntu-latest
     
@@ -31,7 +32,7 @@ jobs:
     - name: Building UPPM
       run: |
         sudo chmod 777 /etc/php/8.0/cli/php.ini
-        sudo echo \nphar.readonly = Off >> /etc/php/8.0/cli/php.ini
+        sudo echo phar.readonly = Off >> /etc/php/8.0/cli/php.ini
         php8.0 src/main/bootstrap.php install
         php8.0 src/main/bootstrap.php build
       
