--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -46,6 +46,7 @@ jobs:
       run: |
         ./target/uppm.phar create test
         cd test
+        chmod +x ../target/uppm.phar
         ../target/uppm.phar install deverm
         ../target/uppm.phar install interaapps/ulole-orm+master@github
         ../target/uppm.phar install
