--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -20,7 +20,6 @@ jobs:
 
     - name: Building
       run: |
-        sudo chmod 777 /etc/php/8.0/cli/php.ini
         sudo echo phar.readonly = Off >> /etc/php/8.0/cli/php.ini
         php8.0 src/main/bootstrap.php build
   test:
@@ -31,7 +30,6 @@ jobs:
     
     - name: Building UPPM
       run: |
-        sudo chmod 777 /etc/php/8.0/cli/php.ini
         sudo echo phar.readonly = Off >> /etc/php/8.0/cli/php.ini
         php8.0 src/main/bootstrap.php install
         php8.0 src/main/bootstrap.php build
@@ -52,5 +50,6 @@ jobs:
         ../target/uppm.phar install
         ../target/uppm.phar lock
         ../target/uppm.phar run start
+        sudo echo phar.readonly = Off >> /etc/php/8.0/cli/php.ini
         ../target/uppm.phar build
         ./target/test-1.0.phar
