--- a/.github/workflows/create-uppm-phar-release.yml
+++ b/.github/workflows/create-uppm-phar-release.yml
@@ -1,6 +1,10 @@
+name: create uppm.phar for release
+
 on:
-  release:
-    types: [created]
+  push:
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
 
 jobs:
   build:
@@ -21,6 +25,7 @@ jobs:
           sudo chmod 777 /etc/php/8.0/cli/php.ini
           sudo echo phar.readonly = Off >> /etc/php/8.0/cli/php.ini
           php8.0 src/main/bootstrap.php install
+          php8.0 src/main/bootstrap.php lock
           php8.0 src/main/bootstrap.php build
           chmod +x ./target/uppm.phar
 
