--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -16,9 +16,8 @@ jobs:
     
     - name: Install dependencies
       run: |
-        wget -O uppm.phar https://raw.githubusercontent.com/interaapps/uppm/master/target/uppm.phar
-        php8.0 uppm.phar install
-        php8.0 uppm.phar lock
+        php8.0 target/uppm.phar install
+        php8.0 target/uppm.phar lock
 
     - name: Building
       run: |
