Fixed autoload for

--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -35,7 +35,8 @@ jobs:
       run: |
         sudo chmod 777 /etc/php/8.0/cli/php.ini
         sudo echo phar.readonly = Off >> /etc/php/8.0/cli/php.ini
-        php8.0 uppm.phar install
+        php8.0 target/uppm.phar lock
+        php8.0 target/uppm.phar install
         php8.0 src/main/bootstrap.php build
         chmod +x ./target/uppm.phar
       
