--- a/.github/workflows/create-uppm-phar-release.yml
+++ b/.github/workflows/create-uppm-phar-release.yml
@@ -1,10 +1,8 @@
 name: create uppm.phar for release
 
 on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+  release:
+    types: [created]
 
 jobs:
   build:
